# TuxLS

./: CMakeLists.txt  Master.cmake  README.md  TuxLS.sln
Core/: CMakeLists.txt  Core.vcxproj  Core.vcxproj.filters
Core/cc/: Accent.cc  CString.cc  Icons.cc  Rem.cc  String.cc  Text.cc  TextAttr.cc
Core/include/TuxLS/Core/: CString.h  DllConfig.h  Expect.h  Rem.h  String.h
Core/include/TuxLS/Core/Encodings/: Accent.h  Icons.h  Text.h  TextAttr.h
Tests/: CMakeLists.txt  Test.cc  Tests.vcxproj  Tests.vcxproj.filters
Ui/: CMakeLists.txt  Ui.vcxproj  Ui.vcxproj.filters
Ui/cc/: Console.cc  Geometry.cc  Object.cc  Painter.cc  VDC.cc  Widget.cc
Ui/cc/Elements/: Element.cc  Label.cc
Ui/include/TuxLS/Ui/: Console.h  DllConfig.h  Geometry.h  Object.h  Painter.h  UiDefs.h  VDC.h  Widget.h
Ui/include/TuxLS/Ui/Elements/: Element.h  Label.h
